Busqueda por estado en reporte de resultados Borrado de observaciones